[package]
name = "palparser-wasm"
version = "0.1.3"
authors = ["Brandon Woolworth <beemerwt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
byteorder = "1.5.0"
wasm-bindgen = "0.2.90"
serde = { version = "1.0.195", features = ["derive"] }
uuid = { version = "1.6.1", features = ["serde"] }
indexmap = { version = "2.1.0", features = ["serde"] }
thiserror = "1.0.56"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.67"
serde_json = { version = "1.0.111", features = ["preserve_order", "float_roundtrip"] }
wasm-bindgen-futures = "0.4.40"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
